--- a/vijay.html
+++ b/vijay.html
@@ -5,3 +5,4 @@
 <p>
   Joseph Vijay Chandrasekhar, known simply as Vijay, is a prominent Indian actor and politician, celebrated for his significant contributions to Tamil cinema and his recent foray into politics.
 </p>
+<p>contact details : 52225552 </p>
